<resources>
    <string name="app_name">BackupBudgit</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name </string>
    <string name="register_username">username</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="plainText_name">Name</string>
    <string name="plainText_username">Username</string>
    <string name="plainText_password">Password</string>
    <string name="plainText_confirmPassword">Confirm Password</string>

    <string name="plainText_Registration">Registration</string>
    <string name="dataEntry">Enter Budget Information</string>
    <string name="chartView">Visual Representation of Budget</string>
    <string name="viewCalc">Loan/Savings Calculator</string>
    <string name="logout">Logout</string>
    <string name="income_text">Please enter your monthly income:</string>
    <string name="moreButton">More?</string>
    <string name="doneFinance">Finished</string>
    <string name="bills_text">Please enter your recurring monthly bills:</string>
    <string name="backToProfile">Profile Home</string>
    <string name="toChartPage">Visualize</string>
    <string name="toCalculator">Calculators</string>
    <string name="Register_button_text">Register</string>
    <string name="title">BudgIT</string>
    <string name="todo">TODO</string>
    <string name="incomeinput">Income Here</string>
    <string name="bill_amount_input">Bill cost here</string>
    <string name="calc_header">Payment Calculator</string>
    <string name="calc_sizeOfPayment">Total Size of Payment</string>
    <string name="calc_monthlyPaymentInstructions">Determine the number of months via\nmonthly payments</string>
    <string name="calc_Calculate">Calculate</string>
    <string name="calc_pickOne">Pick One</string>
    <string name="calc_or">OR</string>
    <string name="calc_numPaymentsInstructions">Determine your monthly payment size\nvia the number of months</string>
    <string name="calc_payAssit">Monthly Payment Calculator</string>
</resources>